--- a/init/templates/jekyll/Gemfile
+++ b/init/templates/jekyll/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
 gem 'rake'
-gem 'jekyll'
-gem 'sass'
-gem 'compass'
+gem 'jekyll', '2.5.3'
+gem 'sass', '3.4.12'
+gem 'compass', '1.0.1'
