--- a/init/templates/wordpress/src/bower.json
+++ b/init/templates/wordpress/src/bower.json
@@ -1,19 +1,30 @@
 {
-    "name": "projectname",
-    "version": "0.1.0",
-    "homepage": "http://www.projectname.com",
-    "authors": [
-        "Vitor Britto <code@vitorbritto.com.br>"
-    ],
-    "description": "Descrition goes here",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "components"
-    ],
-    "dependencies": {
-        "jquery": "1.10.x",
-        "modernizr": "2.6.x"
-    }
+  "name": "general",
+  "version": "0.1.0",
+  "homepage": "https://github.com/vitorbritto/boilerplates",
+  "authors": [
+    "Vitor Britto <code@vitorbritto.com.br>"
+  ],
+  "description": "",
+  "moduleType": [
+    "amd",
+    "globals",
+    "node"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "jquery": "~2.1.4",
+    "modernizr": "~2.8.3",
+    "owlcarousel": "~1.3.2"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "~3.3.5"
+  }
 }
