--- a/init/templates/wordpress/src/package.json
+++ b/init/templates/wordpress/src/package.json
@@ -22,6 +22,8 @@
     "grunt-browser-sync": "^2.1.3",
     "grunt-browserify": "^2.0.8",
     "grunt-bump": "0.0.16",
+    "grunt-casper": "^0.4.2",
+    "grunt-checktextdomain": "^0.1.1",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-compress": "^0.8.0",
@@ -37,9 +39,11 @@
     "grunt-grunticon": "^1.2.13",
     "grunt-mocha": "^0.4.11",
     "grunt-pagespeed": "^1.0.0",
+    "grunt-potomo": "^3.1.0",
     "grunt-rsync": "^0.6.2",
     "grunt-sitespeedio": "^0.5.0",
     "grunt-uncss": "^0.4.3",
+    "grunt-wp-i18n": "^0.5.0",
     "load-grunt-config": "^0.17.1",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
