--- a/init/templates/meanstack/package.json
+++ b/init/templates/meanstack/package.json
@@ -26,67 +26,72 @@
     "url": "https://github.com/vitorbritto/boilerplates/issues"
   },
   "scripts": {
-    "install": "napa"
+    "preinstall": "npm install npm-check-updates -g && npm-check-updates -u",
+    "postinstall": "napa && npm run start",
+    "start": "grunt",
+    "check": "npm outdated",
+    "update": "npm-check-updates -u && rm -rf node_modules && npm i"
   },
   "napa": {
     "angular": "angular/bower-angular",
     "angular-route": "angular/bower-angular-route"
   },
   "dependencies": {
-    "express": "^4.1.1",
-    "jade": "~1.3.0",
-    "stylus": "0.42.3",
-    "nib": "^1.0.2",
-    "mongoose": "^3.8.8",
-    "connect-mongo": "~0.4.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "method-override": "^1.0.0",
-    "errorhandler": "^1.0.0",
-    "moment": "~2.6.0",
-    "express-session": "^1.0.4",
-    "compression": "^1.0.1",
-    "winston": "~0.7.3",
-    "forever": "*",
-    "lodash": "~2.4.1",
-    "jquery": "^2.1.1",
-    "browserify": "^4.0.0",
-    "mocha": "^1.18.2",
-    "chai": "~1.9.1",
-    "supertest": "~0.12.0",
-    "superagent": "^0.18.0",
+    "body-parser": "~1.13.1",
+    "browserify": "^10.2.4",
+    "chai": "~3.0.0",
+    "compression": "^1.5.0",
+    "connect-mongo": "~0.8.1",
+    "cookie-parser": "~1.3.5",
+    "errorhandler": "^1.4.0",
+    "express": "^4.13.0",
+    "express-session": "^1.11.3",
+    "forever": "latest",
+    "jade": "~1.11.0",
+    "jadeify": "^4.3.0",
+    "jquery": "^2.1.4",
     "karma": "latest",
-    "jadeify": "^2.3.0",
-    "napa": "^0.4.1"
+    "lodash": "~3.9.3",
+    "method-override": "^2.3.3",
+    "mocha": "^2.2.5",
+    "moment": "~2.10.3",
+    "mongoose": "3.8.x",
+    "morgan": "~1.6.0",
+    "napa": "^1.2.0",
+    "nib": "^1.1.0",
+    "serve-favicon": "^2.3.0",
+    "static-favicon": "~2.0.0-alpha",
+    "stylus": "0.51.1",
+    "superagent": "^1.2.0",
+    "supertest": "~1.0.1",
+    "winston": "~1.0.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.4",
-    "time-grunt": "^0.3.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-compress": "^0.8.0",
+    "grunt": "^0.4.5",
+    "time-grunt": "^1.2.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-browser-sync": "^0.9.1",
-    "grunt-nodemon": "^0.2.1",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-csslint": "^0.2.0",
-    "grunt-contrib-stylus": "^0.15.0",
-    "grunt-contrib-jade": "^0.12.0",
-    "grunt-concurrent": "^0.5.0",
+    "grunt-browser-sync": "^2.1.3",
+    "grunt-nodemon": "^0.4.0",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-csslint": "^0.4.0",
+    "grunt-contrib-stylus": "^0.21.0",
+    "grunt-contrib-jade": "^0.14.1",
+    "grunt-concurrent": "^2.0.0",
     "grunt-imageoptim": "^1.4.1",
-    "grunt-browserify": "^2.0.8",
-    "grunt-shell": "^0.7.0",
-    "grunt-karma": "^0.8.2",
-    "grunt-karma-coveralls": "^2.3.0",
-    "karma-browserify": "0.0.6",
-    "karma-mocha": "~0.1",
+    "grunt-browserify": "^3.8.0",
+    "grunt-shell": "^1.1.2",
+    "grunt-karma": "^0.11.1",
+    "grunt-karma-coveralls": "^2.5.3",
+    "karma-browserify": "4.2.1",
+    "karma-mocha": "~0.2",
     "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.1",
-    "karma-firefox-launcher": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma-coverage": "^0.2.4"
+    "karma-chrome-launcher": "~0.2.0",
+    "karma-firefox-launcher": "~0.1.6",
+    "karma-phantomjs-launcher": "~0.2.0",
+    "karma-coverage": "^0.4.2"
   }
 }
