--- a/init/templates/nodeapp/package.json
+++ b/init/templates/nodeapp/package.json
@@ -22,45 +22,52 @@
     "url": "https://github.com/vitorbritto/boilerplates/issues"
   },
   "scripts": {
-    "start": "node app.js",
-    "test": "karma start karma.conf",
-    "build": ""
+    "preinstall": "npm install npm-check-updates -g && npm-check-updates -u",
+    "postinstall": "npm run start",
+    "start": "gulp",
+    "check": "npm outdated",
+    "update": "npm-check-updates -u && rm -rf node_modules && npm i",
+    "test": "gulp test"
   },
   "dependencies": {
-    "gulp": "^3.6.2",
-    "bower": "1.2.x",
-    "express": "^4.1.1",
-    "jade": "~1.3.0",
-    "stylus": "0.42.3",
-    "nib": "^1.0.2",
-    "mongoose": "^3.8.8",
-    "connect-mongo": "~0.4.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "method-override": "^1.0.0",
-    "errorhandler": "^1.0.0",
-    "moment": "~2.6.0",
-    "express-session": "^1.0.4",
-    "compression": "^1.0.1",
-    "winston": "~0.7.3",
-    "forever": "*"
+    "gulp": "^3.9.0",
+    "bower": "1.4.x",
+    "express": "^4.13.0",
+    "jade": "~1.11.0",
+    "stylus": "0.51.1",
+    "nib": "^1.1.0",
+    "mongoose": "3.8.x",
+    "connect-mongo": "~0.8.1",
+    "serve-favicon": "^2.3.0",
+    "static-favicon": "~2.0.0-alpha",
+    "morgan": "~1.6.0",
+    "cookie-parser": "~1.3.5",
+    "body-parser": "~1.13.1",
+    "method-override": "^2.3.3",
+    "errorhandler": "^1.4.0",
+    "moment": "~2.10.3",
+    "express-session": "^1.11.3",
+    "compression": "^1.5.0",
+    "winston": "~1.0.1",
+    "forever": "latest"
   },
   "devDependencies": {
-    "gulp-nodemon": "^1.0.2",
-    "gulp-uglify": "^0.3.0",
-    "gulp-jshint": "^1.5.5",
-    "jshint-stylish": "^0.2.0",
-    "gulp-load-plugins": "^0.5.1",
-    "gulp-changed": "^0.3.0",
-    "gulp-clean": "^0.2.4",
-    "gulp-livereload": "^1.5.0",
-    "gulp-header": "^1.0.2",
-    "gulp-imagemin": "^0.5.0",
-    "chai": "~1.9.1",
-    "supertest": "~0.12.0",
-    "superagent": "^0.18.0",
-    "browserify": "3.19.x"
+    "browserify": "10.2.x",
+    "chai": "~3.0.0",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-changed": "^1.2.1",
+    "gulp-coverage": "^0.3.36",
+    "gulp-header": "^1.2.2",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-jshint": "^1.11.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^1.0.0-rc",
+    "gulp-mocha": "^2.1.2",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-uglify": "^1.2.0",
+    "jshint-stylish": "^2.0.1",
+    "superagent": "^1.2.0",
+    "supertest": "~1.0.1"
   }
 }
