--- a/init/templates/reactflux/package.json
+++ b/init/templates/reactflux/package.json
@@ -23,13 +23,20 @@
   "bugs": {
     "url": "https://github.com/vitorbritto/boilerplates/issues"
   },
+  "scripts": {
+    "start": "gulp",
+    "check": "npm outdated",
+    "update": "npm-check-updates -u && rm -rf node_modules && npm i",
+    "test": "gulp test"
+  },
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^8.1.1",
     "browser-sync": "^1.3.6",
+    "browserify": "^8.1.1",
     "flux-react": "^2.6.0",
     "gulp": "^3.8.10",
     "gulp-changed": "^0.3.0",
+    "gulp-coverage": "^0.3.36",
     "gulp-csscomb": "^3.0.3",
     "gulp-csslint": "^0.1.5",
     "gulp-cssmin": "^0.1.6",
