--- a/init/templates/wordpress/src/package.json
+++ b/init/templates/wordpress/src/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "general",
+  "name": "",
   "version": "0.1.0",
   "title": "",
   "homepage": "",
@@ -9,43 +9,48 @@
   "license": "MIT",
   "main": "Gruntfile.js",
   "directories": {
-    "test": "test"
+    "test": "mocha"
   },
   "scripts": {
-    "postinstall": "bower install && grunt start"
+    "preinstall": "npm install npm-check-updates -g",
+    "postinstall": "bower install",
+    "start": "grunt start",
+    "check": "npm outdated",
+    "update": "npm-check-updates -u && rm -rf node_modules && npm i"
   },
   "dependencies": {
-    "browserify": "^4.0.0"
+    "browserify": "^11.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.1.3",
-    "grunt-browserify": "^2.0.8",
-    "grunt-bump": "0.0.16",
+    "grunt-browserify": "^3.8.0",
+    "grunt-bump": "0.3.1",
     "grunt-casper": "^0.4.2",
-    "grunt-checktextdomain": "^0.1.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-compass": "^0.7.2",
-    "grunt-contrib-compress": "^0.8.0",
+    "grunt-checktextdomain": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compass": "^1.0.3",
+    "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-csslint": "^0.3.1",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-imagemin": "^0.8.1",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-csslint": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.12.3",
+    "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-csscomb": "^3.0.0",
-    "grunt-ftp-deploy": "^0.1.3",
-    "grunt-grunticon": "^1.2.13",
-    "grunt-mocha": "^0.4.11",
-    "grunt-pagespeed": "^1.0.0",
-    "grunt-potomo": "^3.1.0",
+    "grunt-csscomb": "^3.0.1",
+    "grunt-exec": "^0.4.6",
+    "grunt-favicons": "^0.7.0",
+    "grunt-ftp-deploy": "^0.1.10",
+    "grunt-grunticon": "^2.2.1",
+    "grunt-mocha": "^0.4.13",
+    "grunt-potomo": "^3.3.3",
     "grunt-rsync": "^0.6.2",
-    "grunt-sitespeedio": "^0.5.0",
+    "grunt-svg-sprite": "^1.2.8",
     "grunt-uncss": "^0.4.3",
-    "grunt-wp-i18n": "^0.5.0",
-    "load-grunt-config": "^0.17.1",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "grunt-wp-i18n": "^0.5.2",
+    "load-grunt-config": "^0.17.2",
+    "load-grunt-tasks": "^3.2.0",
+    "time-grunt": "^1.2.1"
   }
 }
