--- a/init/templates/webapp/.editorconfig
+++ b/init/templates/webapp/.editorconfig
@@ -1,18 +1,19 @@
-# http://editorconfig.org
+# editorconfig.org
 root = true
 
-
-# General Files
 [*]
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
-indent_style = space
+end_of_line = lf
 indent_size = 4
+tab_width = 4
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
 
-# Specific Files
-[*.{styl,jade,coffee,sass,haml,rb,json}]
+[*.md]
+trim_trailing_whitespace = false
+
+[*.json]
 indent_size = 2
 tab_width = 2
 indent_style = space
