--- a/init/templates/general/src/package.json
+++ b/init/templates/general/src/package.json
@@ -12,7 +12,11 @@
     "test": "test"
   },
   "scripts": {
-    "postinstall": "bower install && grunt start"
+    "preinstall": "npm install npm-check-updates -g",
+    "postinstall": "bower install",
+    "start": "grunt start",
+    "check": "npm outdated",
+    "update": "npm-check-updates -u && rm -rf node_modules && npm i"
   },
   "dependencies": {
     "browserify": "^4.0.0"
@@ -22,6 +26,7 @@
     "grunt-browser-sync": "^2.1.3",
     "grunt-browserify": "^2.0.8",
     "grunt-bump": "0.0.16",
+    "grunt-casper": "^0.4.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-compress": "^0.8.0",
